testin a bunch of sheet

--- a/contact.html
+++ b/contact.html
@@ -32,18 +32,18 @@
             </div>
             <div class="navWrapper">
                 <a class="navButton" href="index.html"><img draggable="false" class="emoji" alt="" src="src/images/emojis/house.svg"> Home</a>
-                <a class="navButton activeChoice" href="contact.html"><img draggable="false" class="emoji" alt="" src="src/images/emojis/speak.svg"> Contact</a>
                 <a class="navButton" href="experiences.html"><img draggable="false" class="emoji" alt="" src="src/images/emojis/brain.svg"> Experiences</a>
                 <a class="navButton" href="projects.html"><img draggable="false" class="emoji" alt="" src="src/images/emojis/tools.svg"> Projects</a>
+                <a class="navButton activeChoice" href="contact.html"><img draggable="false" class="emoji" alt="" src="src/images/emojis/speak.svg"> Contact</a>
             </div>
             <div class="navWrapperMobile">
                 <button onclick="toggleMenu()" class="navButton" >＝ Menu</button>
             </div>
             <div class="mobileMenu" id="mobileMenuID">
                 <a class="navButton" href="index.html"><img draggable="false" class="emoji" alt="" src="src/images/emojis/house.svg"> Home</a>
-                <a class="navButton activeChoice" href="contact.html"><img draggable="false" class="emoji" alt="" src="src/images/emojis/speak.svg"> Contact</a>
                 <a class="navButton" href="experiences.html"><img draggable="false" class="emoji" alt="" src="src/images/emojis/brain.svg"> Experiences</a>
                 <a class="navButton" href="projects.html"><img draggable="false" class="emoji" alt="" src="src/images/emojis/tools.svg"> Projects</a>
+                <a class="navButton activeChoice" href="contact.html"><img draggable="false" class="emoji" alt="" src="src/images/emojis/speak.svg"> Contact</a>
             </div>
         </nav>
     </header>
@@ -57,7 +57,7 @@
                             <div class="titleEmailWrapper">
                                 <p class="titleEmail">Email</p>
                             </div>
-                            <p>If you have an email client installed on your device, you can click on the "Send an email" button.<br> If you don't, simply send an email to this address:</p>
+                            <p class="emailText">If you have an email client installed on your device, you can click on the "Send an email" button.<br> If you don't, simply send an email to this address:</p>
                             <p class="emailModalText">adnan@aridan.net</p>
                             <div class="buttonsEmail">
                                 <a class="socialMedia email" href="mailto:adnan@aridan.net">Send an email</a>
