--- a/experiences.html
+++ b/experiences.html
@@ -23,27 +23,39 @@
         <nav>
             <div class="langWrapper">
                 <div class="dropdown">
-                    <button onclick="toggleLangDrop()" class="dropButton lang" id="dropButtonID"><img draggable="false" class="emoji" alt="" src="src/images/emojis/globe.svg"> Language</button>
+                    <button onclick="toggleLangDrop()" class="dropButton lang" id="dropButtonID"><img draggable="false"
+                            class="emoji" alt="" src="src/images/emojis/globe.svg"> Language</button>
                     <div id="langDrop" class="dropdownContent">
-                        <a href="experiences.html"><img draggable="false" class="emoji" alt="" src="src/images/emojis/usa.svg">/<img draggable="false" class="emoji" alt="" src="src/images/emojis/uk.svg"> English</a>
-                        <a href="sv/experiences.html"><img draggable="false" class="emoji" alt="" src="src/images/emojis/sweden.svg"> Svenska (Swedish)</a>
+                        <a href="experiences.html"><img draggable="false" class="emoji" alt=""
+                                src="src/images/emojis/usa.svg">/<img draggable="false" class="emoji" alt=""
+                                src="src/images/emojis/uk.svg"> English</a>
+                        <a href="sv/experiences.html"><img draggable="false" class="emoji" alt=""
+                                src="src/images/emojis/sweden.svg"> Svenska (Swedish)</a>
                     </div>
                 </div>
             </div>
             <div class="navWrapper">
-                <a class="navButton" href="index.html"><img draggable="false" class="emoji" alt="" src="src/images/emojis/house.svg"> Home</a>
-                <a class="navButton" href="contact.html"><img draggable="false" class="emoji" alt="" src="src/images/emojis/speak.svg"> Contact</a>
-                <a class="navButton activeChoice" href="experiences.html"><img draggable="false" class="emoji" alt="" src="src/images/emojis/brain.svg"> Experiences</a>
-                <a class="navButton" href="projects.html"><img draggable="false" class="emoji" alt="" src="src/images/emojis/tools.svg"> Projects</a>
+                <a class="navButton" href="index.html"><img draggable="false" class="emoji" alt=""
+                        src="src/images/emojis/house.svg"> Home</a>
+                <a class="navButton activeChoice" href="experiences.html"><img draggable="false" class="emoji" alt=""
+                        src="src/images/emojis/brain.svg"> Experiences</a>
+                <a class="navButton" href="projects.html"><img draggable="false" class="emoji" alt=""
+                        src="src/images/emojis/tools.svg"> Projects</a>
+                <a class="navButton" href="contact.html"><img draggable="false" class="emoji" alt=""
+                        src="src/images/emojis/speak.svg"> Contact</a>
             </div>
             <div class="navWrapperMobile">
-                <button onclick="toggleMenu()" class="navButton" >＝ Menu</button>
+                <button onclick="toggleMenu()" class="navButton">＝ Menu</button>
             </div>
             <div class="mobileMenu" id="mobileMenuID">
-                <a class="navButton" href="index.html"><img draggable="false" class="emoji" alt="" src="src/images/emojis/house.svg"> Home</a>
-                <a class="navButton" href="contact.html"><img draggable="false" class="emoji" alt="" src="src/images/emojis/speak.svg"> Contact</a>
-                <a class="navButton activeChoice" href="experiences.html"><img draggable="false" class="emoji" alt="" src="src/images/emojis/brain.svg"> Experiences</a>
-                <a class="navButton" href="projects.html"><img draggable="false" class="emoji" alt="" src="src/images/emojis/tools.svg"> Projects</a>
+                <a class="navButton" href="index.html"><img draggable="false" class="emoji" alt=""
+                        src="src/images/emojis/house.svg"> Home</a>
+                <a class="navButton activeChoice" href="experiences.html"><img draggable="false" class="emoji" alt=""
+                        src="src/images/emojis/brain.svg"> Experiences</a>
+                <a class="navButton" href="projects.html"><img draggable="false" class="emoji" alt=""
+                        src="src/images/emojis/tools.svg"> Projects</a>
+                <a class="navButton" href="contact.html"><img draggable="false" class="emoji" alt=""
+                        src="src/images/emojis/speak.svg"> Contact</a>
             </div>
         </nav>
     </header>
@@ -52,12 +64,78 @@
             <div class="constructionBox">
                 <div>
                     <h1>Experiences</h1>
-                    <p class="checkBack">Please check back later.</p>
-                    <p class="bottomText">This website follows general guidelines for an accessible internet.<br>You
-                        are allowed to copy the source code of this website. You can find it at <a href="https://github.com/actuallyaridan/aridan.net/">GitHub</a></p>
+                    <div>
+                        <p class="subTitle">I am quite early in to my career, but I've always had a liking for
+                            computers, networking and websites as far as I can remember. <br>Even when I was a child, I
+                            was always intrigued how computers could do and know so much whilst being so small.<br>
+                            Therefore, I know a lot about IT for my age, and I know that I can impress with my
+                            knowledge.</p>
+                        <div class="centerer">
+                            <a href="cv.html" class="cvButton">Request CV/resume</a>
+                        </div>
+                        <div>
+                            <div class="work">
+                                <p class="subTitleExp">Work Experience</p>
+                                <div class="project">
+                                    <p class="projectName">Salesperson, technician and lead web developer at IT Care
+                                        Repairstore</p>
+                                    <p class="projectDesc">This is a website that has all my social media links, all my
+                                        experiences and similar listed. <br>I learned a lot during this project, mainly
+                                        how to make websites look nice.</p>
+                                    <div>
+                                        <p class="projectStatus WIP">Work in progress</p>
+                                        <p class="projectLink"><img draggable="false" class="emoji" alt=""
+                                                src="src/images/emojis/link.svg"> <a
+                                                href="https://aridan.net">aridan.net</a></p>
+                                        <p class="projectLink"><img draggable="false" class="emoji" alt=""
+                                                src="src/images/emojis/link.svg"> <a
+                                                href="https://github.com/actuallyaridan/aridan.net">GitHub</a></p>
+                                        <p class="projectLearned"><img draggable="false" class="emoji" alt=""
+                                                src="src/images/emojis/teacher.svg"> HTML, CSS, JavaScript</p>
+                                        <p class="projectLegal"><img draggable="false" class="emoji" alt=""
+                                                src="src/images/emojis/judge.svg"> MIT license</p>
+                                    </div>
+                                </div>
+                                <div class="project">
+                                    <p class="projectName">Apprentice at IT Care Repairstore</p>
+                                    <p class="projectDesc">I have modified this iPod with a transparent click wheel and
+                                        button along with a transparent faceplate. <br>I've also installed a larger
+                                        battery and replaced its hard drive with a microSD card.</p>
+                                    <div>
+                                        <p class="projectStatus WIP">Work in progress</p>
+                                        <p class="projectLearned"><img draggable="false" class="emoji" alt=""
+                                                src="src/images/emojis/teacher.svg"> Electronics modification</p>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="education">
+                                <p class="subTitleExp">Education</p>
+                                <div class="project">
+                                    <p class="projectName">Networking and computer student at Teknikum </p>
+                                    <p class="projectDesc">This is a website that has all my social media links, all my
+                                        experiences and similar listed. <br>I learned a lot during this project, mainly
+                                        how to make websites look nice.</p>
+                                    <div>
+                                        <p class="projectStatus WIP">Work in progress</p>
+                                        <p class="projectLink"><img draggable="false" class="emoji" alt=""
+                                                src="src/images/emojis/link.svg"> <a
+                                                href="https://aridan.net">aridan.net</a></p>
+                                        <p class="projectLink"><img draggable="false" class="emoji" alt=""
+                                                src="src/images/emojis/link.svg"> <a
+                                                href="https://github.com/actuallyaridan/aridan.net">GitHub</a></p>
+                                        <p class="projectLearned"><img draggable="false" class="emoji" alt=""
+                                                src="src/images/emojis/teacher.svg"> HTML, CSS, JavaScript</p>
+                                        <p class="projectLegal"><img draggable="false" class="emoji" alt=""
+                                                src="src/images/emojis/judge.svg"> MIT license</p>
+                                    </div>
+                                </div>
+                            </div>
+
+
+                        </div>
+                    </div>
                 </div>
             </div>
-        </div>
     </main>
 </body>
 
