--- a/projects.html
+++ b/projects.html
@@ -22,27 +22,39 @@
         <nav>
             <div class="langWrapper">
                 <div class="dropdown">
-                    <button onclick="toggleLangDrop()" class="dropButton lang" id="dropButtonID"><img draggable="false" class="emoji" alt="" src="src/images/emojis/globe.svg"> Language</button>
+                    <button onclick="toggleLangDrop()" class="dropButton lang" id="dropButtonID"><img draggable="false"
+                            class="emoji" alt="" src="src/images/emojis/globe.svg"> Language</button>
                     <div id="langDrop" class="dropdownContent">
-                        <a href="projects.html"><img draggable="false" class="emoji" alt="" src="src/images/emojis/usa.svg">/<img draggable="false" class="emoji" alt="" src="src/images/emojis/uk.svg"> English</a>
-                        <a href="sv/projects.html"><img draggable="false" class="emoji" alt="" src="src/images/emojis/sweden.svg"> Svenska (Swedish)</a>
+                        <a href="projects.html"><img draggable="false" class="emoji" alt=""
+                                src="src/images/emojis/usa.svg">/<img draggable="false" class="emoji" alt=""
+                                src="src/images/emojis/uk.svg"> English</a>
+                        <a href="sv/projects.html"><img draggable="false" class="emoji" alt=""
+                                src="src/images/emojis/sweden.svg"> Svenska (Swedish)</a>
                     </div>
                 </div>
             </div>
             <div class="navWrapper">
-                <a class="navButton" href="index.html"><img draggable="false" class="emoji" alt="" src="src/images/emojis/house.svg"> Home</a>
-                <a class="navButton" href="contact.html"><img draggable="false" class="emoji" alt="" src="src/images/emojis/speak.svg"> Contact</a>
-                <a class="navButton" href="experiences.html"><img draggable="false" class="emoji" alt="" src="src/images/emojis/brain.svg"> Experiences</a>
-                <a class="navButton activeChoice" href="projects.html"><img draggable="false" class="emoji" alt="" src="src/images/emojis/tools.svg"> Projects</a>
+                <a class="navButton" href="index.html"><img draggable="false" class="emoji" alt=""
+                        src="src/images/emojis/house.svg"> Home</a>
+                <a class="navButton" href="experiences.html"><img draggable="false" class="emoji" alt=""
+                        src="src/images/emojis/brain.svg"> Experiences</a>
+                <a class="navButton activeChoice" href="projects.html"><img draggable="false" class="emoji" alt=""
+                        src="src/images/emojis/tools.svg"> Projects</a>
+                <a class="navButton" href="contact.html"><img draggable="false" class="emoji" alt=""
+                        src="src/images/emojis/speak.svg"> Contact</a>
             </div>
             <div class="navWrapperMobile">
-                <button onclick="toggleMenu()" class="navButton" >＝ Menu</button>
+                <button onclick="toggleMenu()" class="navButton">＝ Menu</button>
             </div>
             <div class="mobileMenu" id="mobileMenuID">
-                <a class="navButton" href="index.html"><img draggable="false" class="emoji" alt="" src="src/images/emojis/house.svg"> Home</a>
-                <a class="navButton" href="contact.html"><img draggable="false" class="emoji" alt="" src="src/images/emojis/speak.svg"> Contact</a>
-                <a class="navButton" href="experiences.html"><img draggable="false" class="emoji" alt="" src="src/images/emojis/brain.svg"> Experiences</a>
-                <a class="navButton activeChoice" href="projects.html"><img draggable="false" class="emoji" alt="" src="src/images/emojis/tools.svg"> Projects</a>
+                <a class="navButton" href="index.html"><img draggable="false" class="emoji" alt=""
+                        src="src/images/emojis/house.svg"> Home</a>
+                <a class="navButton" href="experiences.html"><img draggable="false" class="emoji" alt=""
+                        src="src/images/emojis/brain.svg"> Experiences</a>
+                <a class="navButton activeChoice" href="projects.html"><img draggable="false" class="emoji" alt=""
+                        src="src/images/emojis/tools.svg"> Projects</a>
+                <a class="navButton" href="contact.html"><img draggable="false" class="emoji" alt=""
+                        src="src/images/emojis/speak.svg"> Contact</a>
             </div>
         </nav>
     </header>
@@ -52,48 +64,72 @@
                 <div>
                     <h1>Projects</h1>
                     <div>
-                        <p class="subTitle">I have a bunch of projects that I work on now and then. <br>Some of them are technical projects and some others have to do with software and/or websites. <br>Why don't you check them out? I'm sure you'll like them! I had fun making them at least! <img draggable="false" class="emoji" alt="" src="src/images/emojis/happy.svg"></p>
-                        <div class="project">
-                            <p class="projectName">This website (aridan.net)</p>
-                            <p class="projectDesc">This is a website that has all my social media links, all my experiences and similar listed. <br>I learned a lot during this project, mainly how to make websites look nice.</p>
-                            <div>
-                                <p class="projectStatus WIP">Work in progress</p>
-                                <p class="projectLink"><img draggable="false" class="emoji" alt="" src="src/images/emojis/link.svg"> <a href="https://aridan.net">aridan.net</a></p>
-                                <p class="projectLink"><img draggable="false" class="emoji" alt="" src="src/images/emojis/link.svg"> <a href="https://github.com/actuallyaridan/aridan.net">GitHub</a></p>
-                                <p class="projectLearned"><img draggable="false" class="emoji" alt="" src="src/images/emojis/teacher.svg"> HTML, CSS, JavaScript</p>
-                                <p class="projectLegal"><img draggable="false" class="emoji" alt="" src="src/images/emojis/judge.svg"> MIT license</p>
+                        <div>
+                            <p class="subTitle">I have a bunch of projects that I work on now and then. <br>Some of them
+                                are technical projects and some others have to do with software and/or websites. <br>Why
+                                don't you check them out? I'm sure you'll like them! I had fun making them at least!
+                                <img draggable="false" class="emoji" alt="" src="src/images/emojis/happy.svg"></p>
+                            <div class="project">
+                                <p class="projectName">This website (aridan.net)</p>
+                                <p class="projectDesc">This is a website that has all my social media links, all my
+                                    experiences and similar listed. <br>I learned a lot during this project, mainly how
+                                    to make websites look nice.</p>
+                                <div>
+                                    <p class="projectStatus WIP">Work in progress</p>
+                                    <p class="projectLink"><img draggable="false" class="emoji" alt=""
+                                            src="src/images/emojis/link.svg"> <a
+                                            href="https://aridan.net">aridan.net</a></p>
+                                    <p class="projectLink"><img draggable="false" class="emoji" alt=""
+                                            src="src/images/emojis/link.svg"> <a
+                                            href="https://github.com/actuallyaridan/aridan.net">GitHub</a></p>
+                                    <p class="projectLearned"><img draggable="false" class="emoji" alt=""
+                                            src="src/images/emojis/teacher.svg"> HTML, CSS, JavaScript</p>
+                                    <p class="projectLegal"><img draggable="false" class="emoji" alt=""
+                                            src="src/images/emojis/judge.svg"> MIT license</p>
+                                </div>
                             </div>
-                        </div>
-                        <div class="project">
-                            <p class="projectName">iPod Video 5th Gen</p>
-                            <p class="projectDesc">I have modified this iPod with a transparent click wheel and button along with a transparent faceplate. <br>I've also installed a larger battery and replaced its hard drive with a microSD card.</p>
-                            <div>
-                                <p class="projectStatus WIP">Work in progress</p>
-                                <p class="projectLearned"><img draggable="false" class="emoji" alt="" src="src/images/emojis/teacher.svg"> Electronics modification</p>
+                            <div class="project">
+                                <p class="projectName">iPod Video 5th Gen</p>
+                                <p class="projectDesc">I have modified this iPod with a transparent click wheel and
+                                    button along with a transparent faceplate. <br>I've also installed a larger battery
+                                    and replaced its hard drive with a microSD card.</p>
+                                <div>
+                                    <p class="projectStatus WIP">Work in progress</p>
+                                    <p class="projectLearned"><img draggable="false" class="emoji" alt=""
+                                            src="src/images/emojis/teacher.svg"> Electronics modification</p>
+                                </div>
                             </div>
-                        </div>
-                        <div class="project">
-                            <p class="projectName">iPod Click Wheel 4th Gen</p>
-                            <p class="projectDesc">I have repaired this iPod by replacing its click wheel. <br>I've also upgraded it by replacing its hard drive with a Compact Flash card and I installed a new battery too.</p>
-                            <div>
-                                <p class="projectStatus WIP">Work in progress</p>
-                                <p class="projectLearned"><img draggable="false" class="emoji" alt="" src="src/images/emojis/teacher.svg"> Electronics modification</p>
+                            <div class="project">
+                                <p class="projectName">iPod Click Wheel 4th Gen</p>
+                                <p class="projectDesc">I have repaired this iPod by replacing its click wheel. <br>I've
+                                    also upgraded it by replacing its hard drive with a Compact Flash card and I
+                                    installed a new battery too.</p>
+                                <div>
+                                    <p class="projectStatus WIP">Work in progress</p>
+                                    <p class="projectLearned"><img draggable="false" class="emoji" alt=""
+                                            src="src/images/emojis/teacher.svg"> Electronics modification</p>
+                                </div>
                             </div>
-                        </div>
-                        <div class="project">
-                            <p class="projectName">iPod Mini 2nd Gen </p>
-                            <p class="projectDesc">I've also upgraded this iPod by replacing its hard drive with a Compact Flash card and I installed a new battery too.</p>
-                            <div>
-                                <p class="projectStatus completed">Completed</p>
-                                <p class="projectLearned"><img draggable="false" class="emoji" alt="" src="src/images/emojis/teacher.svg"> Electronics modification</p>
+                            <div class="project">
+                                <p class="projectName">iPod Mini 2nd Gen </p>
+                                <p class="projectDesc">I've also upgraded this iPod by replacing its hard drive with a
+                                    Compact Flash card and I installed a new battery too.</p>
+                                <div>
+                                    <p class="projectStatus completed">Completed</p>
+                                    <p class="projectLearned"><img draggable="false" class="emoji" alt=""
+                                            src="src/images/emojis/teacher.svg"> Electronics modification</p>
+                                </div>
                             </div>
-                        </div>
-                        <div class="project">
-                            <p class="projectName">Hackintoshing a PC</p>
-                            <p class="projectDesc">Hackintoshing is the act of installing macOS on non-Apple hardware. <br>I did this as a hobby project and I learned a lot about Apple software. It was a fun project and it still works to this day!</p>
-                            <div>
-                                <p class="projectStatus completed">Completed</p>
-                                <p class="projectLearned"><img draggable="false" class="emoji" alt="" src="src/images/emojis/teacher.svg"> Software</p>
+                            <div class="project">
+                                <p class="projectName">Hackintoshing a PC</p>
+                                <p class="projectDesc">Hackintoshing is the act of installing macOS on non-Apple
+                                    hardware. <br>I did this as a hobby project and I learned a lot about Apple
+                                    software. It was a fun project and it still works to this day!</p>
+                                <div>
+                                    <p class="projectStatus completed">Completed</p>
+                                    <p class="projectLearned"><img draggable="false" class="emoji" alt=""
+                                            src="src/images/emojis/teacher.svg"> Software</p>
+                                </div>
                             </div>
                         </div>
                     </div>
