--- a/404.html
+++ b/404.html
@@ -18,7 +18,7 @@
 
 </head>
 
-<body class="boxAlignment gradientBackgroundAnimation">
+<body class="boxAlignment boringBackground">
     <header>
         <nav>
             <div class="p404Wrapper">
@@ -31,7 +31,7 @@
             <div class="constructionBox">
                 <div>
                     <h1>404</h1>
-                    <p class="subTitle">No, Luke, I am not your father. (Not Found)</p>
+                    <p class="subTitle">Luckily you didn't break the internet this time! (Not Found)</p>
                     <p class="subTitle">The page you're looking for cannot be found. <br>If you entered the URL manually, please check the URL and try again, otherwise the page was probably moved or deleted.</p>
                     <p class="subTitle">Sorry :/</p>
                 </div>
