--- a/404.html
+++ b/404.html
@@ -28,10 +28,9 @@
         <div class="containerCenterer">
             <div class="constructionBox">
                 <div>
-                    <h1>404</h1>
-                    <p class="subTitle">Luckily you didn't break the internet this time! (Not Found)</p>
+                    <h1>404 / Not Found</h1>
+                    <p class="subTitle">Luckily you didn't break the internet this time!</p>
                     <p class="subTitle">The page you're looking for cannot be found. <br>If you entered the URL manually, please check the URL and try again, otherwise the page was probably moved or deleted.</p>
-                    <p class="subTitle">Sorry :/</p>
                 </div>
             </div>
         </div>
