--- a/experiences.html
+++ b/experiences.html
@@ -79,54 +79,26 @@
                                 <div class="project">
                                     <p class="projectName">Salesperson, technician and lead web developer at IT Care
                                         Repairstore</p>
-                                    <p class="projectDesc">This is a website that has all my social media links, all my
-                                        experiences and similar listed. <br>I learned a lot during this project, mainly
-                                        how to make websites look nice.</p>
+                                    <p class="projectDesc">This was my first job. I learned a lot during it and I can honestly say it thought me a lot of life lessons that I needed to learn. <br>I learned how to communicate and work as a team, how to professionally repair technology and how to be a good salesperson.<br> It was a real thrill working there!</p>
                                     <div>
-                                        <p class="projectStatus WIP">Work in progress</p>
+                                        <p class="projectStatus completed">nov 2022 - oct 2023</p>
                                         <p class="projectLink"><img draggable="false" class="emoji" alt=""
                                                 src="src/images/emojis/link.svg"> <a
-                                                href="https://aridan.net">aridan.net</a></p>
-                                        <p class="projectLink"><img draggable="false" class="emoji" alt=""
-                                                src="src/images/emojis/link.svg"> <a
-                                                href="https://github.com/actuallyaridan/aridan.net">GitHub</a></p>
+                                                href="https://itcarestore.se">itcarestore.se</a></p>
                                         <p class="projectLearned"><img draggable="false" class="emoji" alt=""
-                                                src="src/images/emojis/teacher.svg"> HTML, CSS, JavaScript</p>
-                                        <p class="projectLegal"><img draggable="false" class="emoji" alt=""
-                                                src="src/images/emojis/judge.svg"> MIT license</p>
-                                    </div>
-                                </div>
-                                <div class="project">
-                                    <p class="projectName">Apprentice at IT Care Repairstore</p>
-                                    <p class="projectDesc">I have modified this iPod with a transparent click wheel and
-                                        button along with a transparent faceplate. <br>I've also installed a larger
-                                        battery and replaced its hard drive with a microSD card.</p>
-                                    <div>
-                                        <p class="projectStatus WIP">Work in progress</p>
-                                        <p class="projectLearned"><img draggable="false" class="emoji" alt=""
-                                                src="src/images/emojis/teacher.svg"> Electronics modification</p>
+                                                src="src/images/emojis/teacher.svg"> Web Development <br>Customer Service <br>Tech Repairs</p>
                                     </div>
                                 </div>
                             </div>
                             <div class="education">
                                 <p class="subTitleExp">Education</p>
                                 <div class="project">
-                                    <p class="projectName">Networking and computer student at Teknikum </p>
-                                    <p class="projectDesc">This is a website that has all my social media links, all my
-                                        experiences and similar listed. <br>I learned a lot during this project, mainly
-                                        how to make websites look nice.</p>
+                                    <p class="projectName">Networking and computer science student at Teknikum </p>
+                                    <p class="projectDesc">During my time at Teknikum, I got to learn the basics of networking in regard to routing and switching. <br>I also got to learn how to build computers, use virtual machines, manage servers that run on Windows Server along with a <br>basic course in cybersecurity, electronics and web development!</p>
                                     <div>
-                                        <p class="projectStatus WIP">Work in progress</p>
-                                        <p class="projectLink"><img draggable="false" class="emoji" alt=""
-                                                src="src/images/emojis/link.svg"> <a
-                                                href="https://aridan.net">aridan.net</a></p>
-                                        <p class="projectLink"><img draggable="false" class="emoji" alt=""
-                                                src="src/images/emojis/link.svg"> <a
-                                                href="https://github.com/actuallyaridan/aridan.net">GitHub</a></p>
+                                        <p class="projectStatus completed">august 2020 - june 2023</p>
                                         <p class="projectLearned"><img draggable="false" class="emoji" alt=""
-                                                src="src/images/emojis/teacher.svg"> HTML, CSS, JavaScript</p>
-                                        <p class="projectLegal"><img draggable="false" class="emoji" alt=""
-                                                src="src/images/emojis/judge.svg"> MIT license</p>
+                                                src="src/images/emojis/teacher.svg"> Networking <br>Computers <br>Web Development <br>Electronics</p>
                                     </div>
                                 </div>
                             </div>
