--- a/contact.html
+++ b/contact.html
@@ -83,7 +83,7 @@
                         <p class="subTitle">Looking to communicate in a more casual manner? I'm on a bunch of social media platforms too! <br>Any account on any platform that isn't linked here is not me.</p>
                         <div class="socialMedias">
                             <div>
-                                <a class="socialMedia twitter" href="https://x.com/@actuallyaridan">X (formerly Twitter)</a>
+                                <a class="socialMedia twitter" href="https://x.com/actuallyaridan">X (formerly Twitter)</a>
                             </div>
                             <div>
                                 <a class="socialMedia threads" href="https://www.threads.net/@actuallyaridan">Threads (an Instagram app)</a>
