--- a/experiences.html
+++ b/experiences.html
@@ -111,6 +111,12 @@
                 </div>
             </div>
     </main>
+    <footer>
+        <div class="footer">
+            <p>Copyright 2024 Adnan Bukvic unless stated otherwise.<br>This project uses the MIT license.</p>
+            <p>Twemoji by Twitter Inc/X Corp is licensed under CC-BY 4.0.</p>
+        </div>
+    </footer>
 </body>
 
 </html>
