Added meta info

--- a/experiences.html
+++ b/experiences.html
@@ -6,6 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="theme-color" content="#710a97">
     <title>Experiences — actuallyaridan</title>
+    <meta name="description" content="All of actuallyaridan (Adnan Bukvic)'s work and school experience on one page">
+    <meta name="keywords" content="experience, adnan bukvic, actuallyaridan">
+    <meta name="author" content="Adnan Bukvic">
     <link href="src/styles/styles.css" rel="stylesheet">
     <script src="src/scripts/dropDownMenu.js"></script>
     <script src="src/scripts/mobileMenu.js"></script>
