--- a/contact.html
+++ b/contact.html
@@ -6,6 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="theme-color" content="#710a97">
     <title>Contact — actuallyaridan</title>
+    <meta name="description" content="Contact actuallyaridan (Adnan Bukvic) with ease">
+    <meta name="keywords" content="contact, adnan bukvic, actuallyaridan">
+    <meta name="author" content="Adnan Bukvic">
     <link href="src/styles/styles.css" rel="stylesheet">
     <script src="src/scripts/dropDownMenu.js"></script>
     <script src="src/scripts/mobileMenu.js"></script>
