--- a/experiences.html
+++ b/experiences.html
@@ -83,7 +83,7 @@
                                     <p class="projectName">Salesperson, technician and lead web developer at IT Care
                                         Repairstore</p>
                                     <p class="projectDesc">This was my first job. I learned a lot during it and I can honestly say it thought me a lot of life lessons that I needed to learn. <br>I learned how to communicate and work as a team, how to professionally repair technology and how to be a good salesperson.<br> It was a real thrill working there!</p>
-                                    <div>
+                                    <div class="projectStuff">
                                         <p class="projectStatus completed"><img draggable="false" class="emoji" alt=""
                                             src="src/images/emojis/clock.svg"><br>Nov 2022 - Oct 2023</p>
                                         <p class="projectLink"><img draggable="false" class="emoji" alt=""
@@ -99,7 +99,7 @@
                                 <div class="project">
                                     <p class="projectName">Networking and computer science student at Teknikum </p>
                                     <p class="projectDesc">During my time at Teknikum, I got to learn the basics of networking in regard to routing and switching. <br>I also got to learn how to build computers, use virtual machines, manage servers that run on Windows Server along with a <br>basic course in cybersecurity, electronics and web development!</p>
-                                    <div>
+                                    <div class="projectStuff">
                                         <p class="projectStatus completed"><img draggable="false" class="emoji" alt=""
                                             src="src/images/emojis/clock.svg"><br>Aug 2020 - Jun 2023</p>
                                         <p class="projectLearned"><img draggable="false" class="emoji" alt=""
